k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aura-service
  namespace: aura-forecasting
  labels:
    app: aura
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    nodePort: 30080
    name: http
  selector:
    app: aura
